<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/user"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_user" />

    <item
        android:id="@+id/news"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_news" />
    <!--item
        android:id="@+id/measure"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_measure" /-->

    <item
        android:id="@+id/shop"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />


</menu>
