<?xml version="1.0" encoding="utf-8"?>

    <!-- TODO: Update blank fragment layout -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"

            android:layout_weight="1"
            android:adjustViewBounds="false"

            android:src="@mipmap/logo" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="15" />
    <LinearLayout
                android:id="@+id/ll_login1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_name"
                android:gravity="right"/>

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/ll_login2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="horizontal">

            <TextView
                android:id="@+id/text_passwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_passwd"
                android:gravity="right" />

            <EditText
                android:id="@+id/edit_passwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>


    <Button
        android:id="@+id/button_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"

        android:text="@string/button_ok" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="horizontal">
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <CheckBox
            android:id="@+id/cBox_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cBox_remember"
             />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <TextView
            android:id="@+id/tv_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_forgot" />

    </LinearLayout>




</LinearLayout>
