<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:orientation="vertical">
    <!--    //该网格布局有1列,垂直布局
-->
<!--水平布局1 行,2 列-->

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="1">
        <!--0行,0列,占1 列-->
        <FrameLayout
            android:id="@+id/bloodpress1"
            android:layout_width="wrap_content"
            android:layout_height="196dp"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_row="0">


            <ImageView
                android:id="@+id/iv_xueya"
                android:layout_width="wrap_content"
                android:layout_height="196dp"
                android:contentDescription="血压测量"

                app:srcCompat="@drawable/bloodpress" />

            <TextView
                android:id="@+id/tv_bloodpress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:text="@string/text_bloodpress"
                android:textColor="@android:color/black"
                android:textSize="24sp" />


        </FrameLayout>
        <!--0行1列-->
        <FrameLayout
            android:id="@+id/bloodpress1"
            android:layout_width="wrap_content"
            android:layout_height="196dp"
            android:layout_column="1"
            android:layout_columnSpan="1"


            android:layout_row="0">

            <ImageView
                android:id="@+id/iv_xuetang"

                android:layout_width="wrap_content"
                android:layout_height="196dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/bloodsugar" />

            <TextView
                android:id="@+id/tv_bloodsugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:text="@string/bloodsugar"
                android:textColor="@android:color/black"
                android:textSize="24sp" />


        </FrameLayout>

    </GridLayout>
    <!--2行3列-->
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:columnCount="3"
        android:orientation="horizontal"
        android:rowCount="2">

        <FrameLayout
            android:id="@+id/bloodpress1"
            android:layout_width="wrap_content"
            android:layout_height="96dp"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1">

            <ImageView
                android:id="@+id/iv_xueya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="血压测量"
                app:srcCompat="@drawable/bloodpresslist" />

            <TextView
                android:id="@+id/tv_bloodpress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:text="@string/text_bloodpresslist"
                android:textColor="@android:color/black"
                android:textSize="24sp" />


        </FrameLayout>

        <FrameLayout
            android:id="@+id/bloodsugar"
            android:layout_width="wrap_content"
            android:layout_height="96dp"
            android:layout_column="1"
            android:layout_columnSpan="1"
            >

            <ImageView
                android:id="@+id/iv_xuetang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/bloodsugarlist" />

            <TextView
                android:id="@+id/tv_bloodsugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:text="@string/bloodsugarlist"
                android:textColor="@android:color/black"
                android:textSize="24sp" />


        </FrameLayout>
        <FrameLayout
            android:id="@+id/bloodsugar"
            android:layout_width="wrap_content"
            android:layout_height="96dp"
            android:layout_column="2"
            android:layout_columnSpan="1"
            >
        </FrameLayout>
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="1"
        >
    </LinearLayout>



    <TableRow
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:columnCount="3"
        >


    </TableRow>>
</GridLayout>
